# Custom-MPD-Client

./: README.md
custom-mpd-client/: Cargo.toml
custom-mpd-client/src/: app.rs  cava.rs  functions.rs  main.rs
smpd-tui/: Cargo.toml
smpd-tui/src/: app.rs  functions.rs  main.rs  menus.rs  spectrum.rs
