[package]
name = "smpd-tui"
description = "simple mpd client tui"
license = "MIT"
repository = "https://github.com/ponderslime/SMPD-TUI"
readme = "../README.md"
keywords = ["mpd", "ratatui"]
version = "0.1.0"
edition = "2024"

[dependencies]
audioviz = "0.6.0"
cavacore = "2.0.2"
crossterm = "0.29.0"
mpd = "0.1.0"
rand = "0.9.2"
ratatui = "0.29.0"
regex = "1.11.3"
serde = "1.0.227"
serde_json = "1.0.145"


