[package]
name = "smpd-tui"
description = "simple mpd client tui"
license = "MIT"
repository = "https://github.com/ponderslime/SMPD-TUI"
readme = "../README.md"
keywords = ["mpd", "ratatui"]
version = "0.1.1"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
mpd = "0.1.0"
rand = "0.9.2"
ratatui = "0.29.0"
regex = "1.11.3"
